test/interaction/Issue3416.agda
-- Errors should precede warnings in info buffer
-- Reported by nad 2018-11-27
module Issue3416 where

A : Set
A = A

B : Set
B = Set
